Zend/zend_API.c
@@ -154,7 +154,9 @@ ZEND_API int _zend_get_parameters_array_ex(int param_count, zval ***argument_arr
 	while (param_count-->0) {
 		zval **value = (zval**)(p-arg_count);
 
-		if (EG(ze1_compatibility_mode) && Z_TYPE_PP(value) == IS_OBJECT) {
+		if (EG(ze1_compatibility_mode) &&
+		    Z_TYPE_PP(value) == IS_OBJECT &&
+		    !(*value)->is_ref) {
 			zval *value_ptr;
 			char *class_name;
 			zend_uint class_name_len;
